--- a/src/lib/dictionary/dictionary-input/dictionary-input.component.html
+++ b/src/lib/dictionary/dictionary-input/dictionary-input.component.html
@@ -1,18 +1,21 @@
 <div *ngIf="!isLoading">
   <mat-form-field class="normal-align" #autocomplete [style.width]="'100%'" appearance="outline"
-                  *ngIf="!dictMeta.multiSelection">
+                  *ngIf="!dictMeta.multiSelection && {dicRecords: dicRecords | async} as data">
     <mat-label>{{label}}</mat-label>
     <input #inputElement type="text" [placeholder]="placeholder" matInput [formControl]="dictInputControl"
-           [matAutocomplete]="record" (click)="onTouched()">
+           [matAutocomplete]="auto" (click)="onTouched()">
     <button *ngIf="dictInputControl.enabled" type="button" mat-button matSuffix mat-icon-button
             (click)="openDictDialog(); $event.stopPropagation();">
       <mat-icon>fullscreen</mat-icon>
     </button>
-    <mat-autocomplete #record="matAutocomplete" [displayWith]="dictService.displayFn">
-      <mat-option *ngFor="let rd of dicRecords | async" [value]="rd">
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="dictService.displayFn">
+      <mat-option *ngFor="let rd of data.dicRecords" [value]="rd">
         {{ rd.name }}
       </mat-option>
     </mat-autocomplete>
+    <mat-error *ngIf="data.dicRecords && dictInputControl.hasError('isNotObject')">
+      {{data.dicRecords.length ? 'Выберите один из вариантов' : 'По текущему запросу записей не найдено'}}
+    </mat-error>
     <mat-hint [style.color]="'red'" *ngIf="dictInputControl.hasError('notFound')">
       По текущему запросу записей не найдено
     </mat-hint>
@@ -21,6 +24,7 @@
   <app-chips-autocomplete *ngIf="dictMeta.multiSelection"
                           [style.width]="'100%'"
                           [placeholder]="placeholder"
+                          [outputResultsWithHierarchy]="outputResultsWithHierarchy"
                           [label]="label"
                           [data]="data"
                           [params]="paramsForRequest"
